fixed an issue where the info panel displayed behind the problem tower when clicked

--- a/src/sass/landing-island.scss
+++ b/src/sass/landing-island.scss
@@ -70,4 +70,5 @@
   left: 200px;
   width: 228px;
   height: 392px;
+  z-index: 1;
 }
